Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42012

Android: "libQt5Quick.so" not found

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0 RC
    • 5.4.0 Beta
    • QPA
    • None
    • Android 4.4.4, Android 4.2.2, Qt 5.4.0 Beta Android for Windows
    • Android
    • 53261d90fc89a11fb44873b5bbee7836e830d568

      The error appears only if I add the Qt module "multimedia" to my project. There was no problem with the same .pro file in earlier Qt versions.

      I have attached the .pro file

      Android 4.4.4:

      E/dalvikvm(22004): dlopen("/data/data/de.qttest.test/lib/libQt5MultimediaQuick_p.so") failed: Cannot load library: soinfo_link_image(linker.cpp:1635): could not load library "libQt5Quick.so" needed by "libQt5MultimediaQuick_p.so"; caused by load_library(linker.cpp:745): library "libQt5Quick.so" not found
      W/System.err(22004): java.lang.reflect.InvocationTargetException
      W/System.err(22004): at java.lang.reflect.Method.invokeNative(Native Method)
      W/System.err(22004): at java.lang.reflect.Method.invoke(Method.java:511)
      W/System.err(22004): at org.qtproject.qt5.android.bindings.QtActivity.loadApplication(QtActivity.java:434)
      W/System.err(22004): at org.qtproject.qt5.android.bindings.QtActivity.startApp(QtActivity.java:835)
      W/System.err(22004): at org.qtproject.qt5.android.bindings.QtActivity.onCreate(QtActivity.java:1064)
      W/System.err(22004): at de.qttest.test.NotificationClient.onCreate(NotificationClient.java:26)
      W/System.err(22004): at android.app.Activity.performCreate(Activity.java:5104)
      W/System.err(22004): at android.app.Instrumentation.callActivityOnCreate(Instrumentation.java:1080)
      W/System.err(22004): at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:2144)
      W/System.err(22004): at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:2230)
      W/System.err(22004): at android.app.ActivityThread.access$600(ActivityThread.java:141)
      W/System.err(22004): at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1234)
      W/System.err(22004): at android.os.Handler.dispatchMessage(Handler.java:99)
      W/System.err(22004): at android.os.Looper.loop(Looper.java:137)
      W/System.err(22004): at android.app.ActivityThread.main(ActivityThread.java:5046)
      W/System.err(22004): at java.lang.reflect.Method.invokeNative(Native Method)
      W/System.err(22004): at java.lang.reflect.Method.invoke(Method.java:511)
      W/System.err(22004): at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:799)
      W/System.err(22004): at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:566)
      W/System.err(22004): at dalvik.system.NativeStart.main(Native Method)
      W/System.err(22004): Caused by: java.lang.UnsatisfiedLinkError: Cannot load library: soinfo_link_image(linker.cpp:1635): could not load library "libQt5Quick.so" needed by "libQt5MultimediaQuick_p.so"; caused by load_library(linker.cpp:745): library "libQt5Quick.so" not found
      W/System.err(22004): at java.lang.Runtime.load(Runtime.java:340)
      W/System.err(22004): at java.lang.System.load(System.java:521)
      W/System.err(22004): at org.qtproject.qt5.android.QtNative.loadQtLibraries(QtNative.java:137)
      W/System.err(22004): at org.qtproject.qt5.android.QtActivityDelegate.loadApplication(QtActivityDelegate.java:419)
      W/System.err(22004): ... 20 more

      Android 4.2.2:

      D/dalvikvm(24546): Trying to load lib /data/data/de.qttest.test/lib/libQt5Multimedia.so 0x41932a78
      D/dalvikvm(24546): Added shared lib /data/data/de.qttest.test/lib/libQt5Multimedia.so 0x41932a78
      D/dalvikvm(24546): No JNI_OnLoad found in /data/data/de.qttest.test/lib/libQt5Multimedia.so 0x41932a78, skipping init
      D/dalvikvm(24546): Trying to load lib /data/data/de.qttest.test/lib/libQt5MultimediaQuick_p.so 0x41932a78
      E/dalvikvm(24546): dlopen("/data/data/de.qttest.test/lib/libQt5MultimediaQuick_p.so") failed: Cannot load library: soinfo_link_image(linker.cpp:1635): could not load library "libQt5Quick.so" needed by "libQt5MultimediaQuick_p.so"; caused by load_library(linker.cpp:745): library "libQt5Quick.so" not found
      W/System.err(24546): java.lang.reflect.InvocationTargetException
      W/System.err(24546): at java.lang.reflect.Method.invokeNative(Native Method)
      W/System.err(24546): at java.lang.reflect.Method.invoke(Method.java:511)
      W/System.err(24546): at org.qtproject.qt5.android.bindings.QtActivity.loadApplication(QtActivity.java:434)
      W/System.err(24546): at org.qtproject.qt5.android.bindings.QtActivity.startApp(QtActivity.java:835)
      W/System.err(24546): at org.qtproject.qt5.android.bindings.QtActivity.onCreate(QtActivity.java:1064)
      W/System.err(24546): at de.qttest.test.NotificationClient.onCreate(NotificationClient.java:26)
      W/System.err(24546): at android.app.Activity.performCreate(Activity.java:5104)
      W/System.err(24546): at android.app.Instrumentation.callActivityOnCreate(Instrumentation.java:1080)
      W/System.err(24546): at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:2144)
      W/System.err(24546): at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:2230)
      W/System.err(24546): at android.app.ActivityThread.access$600(ActivityThread.java:141)
      W/System.err(24546): at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1234)
      W/System.err(24546): at android.os.Handler.dispatchMessage(Handler.java:99)
      W/System.err(24546): at android.os.Looper.loop(Looper.java:137)
      W/System.err(24546): at android.app.ActivityThread.main(ActivityThread.java:5046)
      W/System.err(24546): at java.lang.reflect.Method.invokeNative(Native Method)
      W/System.err(24546): at java.lang.reflect.Method.invoke(Method.java:511)
      W/System.err(24546): at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:799)
      W/System.err(24546): at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:566)
      W/System.err(24546): at dalvik.system.NativeStart.main(Native Method)
      W/System.err(24546): Caused by: java.lang.UnsatisfiedLinkError: Cannot load library: soinfo_link_image(linker.cpp:1635): could not load library "libQt5Quick.so" needed by "libQt5MultimediaQuick_p.so"; caused by load_library(linker.cpp:745): library "libQt5Quick.so" not found
      W/System.err(24546): at java.lang.Runtime.load(Runtime.java:340)
      W/System.err(24546): at java.lang.System.load(System.java:521)
      W/System.err(24546): at org.qtproject.qt5.android.QtNative.loadQtLibraries(QtNative.java:137)
      W/System.err(24546): at org.qtproject.qt5.android.QtActivityDelegate.loadApplication(QtActivityDelegate.java:419)
      W/System.err(24546): ... 20 more
      D/dalvikvm(24546): GC_FOR_ALLOC freed 209K, 12% free 3629K/4088K, paused 74ms, total 74ms
      I/dalvikvm-heap(24546): Grow heap (frag case) to 3.891MB for 281896-byte allocation
      D/dalvikvm(24546): GC_FOR_ALLOC freed 6K, 11% free 3898K/4364K, paused 12ms, total 12ms
      I/TextToSpeech(24546): Sucessfully bound to com.google.android.tts
      D/libEGL (24546): loaded /system/lib/egl/libEGL_VIVANTE.so
      D/libEGL (24546): loaded /system/lib/egl/libGLESv1_CM_VIVANTE.so
      D/libEGL (24546): loaded /system/lib/egl/libGLESv2_VIVANTE.so
      D/OpenGLRenderer(24546): Enabling debug mode 0
      I/Choreographer(24546): Skipped 32 frames! The application may be doing too much work on its main thread.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            dominik_fehr Dominik Fehr
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes